// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CredentialCard should render collapased share credential card 1`] = `
<div>
  <li
    aria-expanded="false"
    class="selectable"
  >
    <input
      class="select"
      id="0xbe7fcc7aa0186b05fd116c100e2d673fb951163693788640ce6032ad2f700dae"
      name="credential"
      type="radio"
    />
    <label
      class="expand"
      for="0xbe7fcc7aa0186b05fd116c100e2d673fb951163693788640ce6032ad2f700dae"
    >
      <section
        class="collapsedShareCredential"
      >
        <h4
          class="collapsedName"
        >
          Email Credential
        </h4>
        <p
          class="collapsedValue"
        >
          Trusted Entity attester
        </p>
      </section>
    </label>
  </li>
</div>
`;

exports[`CredentialCard should render collapsed card 1`] = `
<div>
  <li
    aria-expanded="false"
    class="credential"
  >
    <button
      class="expand"
      type="button"
    >
      <section
        class="collapsedCredential"
      >
        <h4
          class="collapsedName"
        >
          Email Credential
        </h4>
        <p
          class="collapsedValue"
        >
          mockEmail@mock.mock
        </p>
      </section>
    </button>
  </li>
</div>
`;

exports[`CredentialCard should render collapsed card with backup notification 1`] = `
<div>
  <li
    aria-expanded="false"
    class="credential"
  >
    <button
      aria-label="Email Credential mockEmail@mock.mock (Not backed up)"
      class="downloadPrompt"
      type="button"
    >
      <section
        class="collapsedCredential"
      >
        <h4
          class="collapsedName"
        >
          Email Credential
        </h4>
        <p
          class="collapsedValue"
        >
          mockEmail@mock.mock
        </p>
      </section>
    </button>
  </li>
</div>
`;

exports[`CredentialCard should render expanded card on click 1`] = `
<div>
  <li
    aria-expanded="true"
    class="credential"
  >
    <section
      class="expanded"
    >
      <section
        class="buttons"
      >
        <button
          aria-label="Collapse credential details"
          class="collapse"
          type="button"
        />
        <a
          aria-label="Back up credential"
          class="download"
          download="Email Credential-Email.json"
          href="data:text/json;base64,eyJyZXF1ZXN0Ijp7ImNsYWltIjp7ImNUeXBlSGFzaCI6IjB4MzI5MWJiMTI2ZTMzYjQ4NjJkNDIxYmZhYTFkMmYyNzJlNmNkZmM0Zjk2NjU4OTg4ZmJjZmZlYTg5MTRiZDlhYyIsImNvbnRlbnRzIjp7IkVtYWlsIjoibW9ja0VtYWlsQG1vY2subW9jayIsIk5hbWUiOiJNb2NrIE5hbWUifSwib3duZXIiOiJkaWQ6a2lsdDpsaWdodDowMDRxZTV0SmdvQmUySko3ZWpWVkdCemtUeGpqUjRuUENHZzdRNG5rWkxxZEhvN3NQUiJ9LCJjbGFpbUhhc2hlcyI6WyIweDE0NDU5N2QyODQ1ZTMyNWRmZmQ0ZTUxYTk0ZTNlOWMwNGI1MmRjMTU3M2U2NmFmYzY5Mzg0NmQ5MWYzMWE3MTMiLCIweDMxNzdlYTQxZjc2ZDA2NmQxOTEyM2MyY2IwZGUxM2EzN2Q2MzkwNmQyYzUxOWUzNmZiZmQ3NzczZmFjMWI3MTgiLCIweDlkMmRjYWY1MjM4ZDZiYzRiY2YwMzI4YWVkYjE2ODk0MzZlMDc3ZWJmNjE5OGI2YzRlOTYxNjY0ODA3ZWFlZGYiLCIweGNlZTE5M2ZmZGZhNjM0ODc5MDdkZmUwODQ4YWUxNTBkNGE3MTk2Y2MxZTNkNWJkMmM4OWJlY2I1NDAyZWZjMDciXSwiY2xhaW1Ob25jZU1hcCI6eyIweDU3NDU4YTY5NzJlNzgyMjNjZDRmN2Y0YzU5MjM2ZWE3NmYzODdhZTU3MWFiN2U3OTQ2MGY1NmYyYWE5NzYyM2YiOiJkMGM5ZDY0Ny00MmVmLTRkNDQtYjYwMy0zYjc3NjI2MGE2ZGQiLCIweGNlZmUyYjg4ZDEwODM0ODY5ZGFkM2U4ZDczMDZmNWFhOTlhMWYwNzgyMTRhZGVhZTc5Y2JlZWQzMDNlNjM4YWYiOiI2YjYyMzA4Yy04NTU3LTRiNjEtYWMwMi04ZjkwNTU1NWQ2N2IiLCIweDhiZTMyZDdlOWNjNTAxNWJmNzFiNWM0NTU1MGE4NzkwYzQzYjlhMjZkYmZhOWE4NTIzODcxMjExNzQ1ZDMzYTMiOiIyNDczOTRjMC1kNDZiLTQ4MmEtYjBjNS00OTNhZWI1MDZkNjEiLCIweDEzNjFhN2JhNzUxMjU2ZTlhYzZiM2UzZTI0OTEyZTUwZTY4YmVmNjc4YzUxMzJjMTFjOTU2NzgyMjBlM2JmNWUiOiIwN2I5NWYxNy0zZjIzLTRhOWUtOGY0My0zMzg4MTI3MzY4MmMifSwibGVnaXRpbWF0aW9ucyI6W10sImRlbGVnYXRpb25JZCI6bnVsbCwicm9vdEhhc2giOiIweGJlN2ZjYzdhYTAxODZiMDVmZDExNmMxMDBlMmQ2NzNmYjk1MTE2MzY5Mzc4ODY0MGNlNjAzMmFkMmY3MDBkYWUifSwibmFtZSI6IkVtYWlsIENyZWRlbnRpYWwiLCJjVHlwZVRpdGxlIjoiRW1haWwiLCJhdHRlc3RlciI6IlRydXN0ZWQgRW50aXR5IGF0dGVzdGVyIiwic3RhdHVzIjoiYXR0ZXN0ZWQiLCJpc0Rvd25sb2FkZWQiOnRydWV9"
        />
        <button
          aria-label="Remove credential"
          class="remove"
          type="button"
        />
      </section>
      <dl
        class="details"
      >
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Credential name
          </dt>
          <dd
            class="nameValue"
          >
            Email Credential
            <button
              aria-label="Edit credential name"
              class="editName"
            />
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Status
          </dt>
          <dd
            class="detailValue"
          >
            Attested
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Email
          </dt>
          <dd
            class="detailValue"
          >
            mockEmail@mock.mock
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Name
          </dt>
          <dd
            class="detailValue"
          >
            Mock Name
          </dd>
        </div>
      </dl>
      <h4
        class="technical"
      >
        Technical details
      </h4>
      <dl
        class="details"
      >
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            CType
          </dt>
          <dd
            class="detailValue"
          >
            Email
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Attester
          </dt>
          <dd
            class="detailValue"
          >
            Trusted Entity attester
          </dd>
        </div>
        <div
          class="hash"
        >
          <dt
            class="detailName"
          >
            Credential hash
          </dt>
          <dd
            class="detailValue"
          >
            0xbe7fcc7aa0186b05fd116c100e2d673fb951163693788640ce6032ad2f700dae
          </dd>
        </div>
      </dl>
    </section>
  </li>
</div>
`;

exports[`CredentialCard should render expanded card with backup notification 1`] = `
<div>
  <li
    aria-expanded="true"
    class="credential"
  >
    <section
      class="expanded"
    >
      <section
        class="buttons"
      >
        <button
          aria-label="Collapse credential details"
          class="collapse"
          type="button"
        />
        <a
          aria-label="Back up credential"
          class="downloadPromptExpanded"
          download="Email Credential-Email.json"
          href="data:text/json;base64,eyJyZXF1ZXN0Ijp7ImNsYWltIjp7ImNUeXBlSGFzaCI6IjB4MzI5MWJiMTI2ZTMzYjQ4NjJkNDIxYmZhYTFkMmYyNzJlNmNkZmM0Zjk2NjU4OTg4ZmJjZmZlYTg5MTRiZDlhYyIsImNvbnRlbnRzIjp7IkVtYWlsIjoibW9ja0VtYWlsQG1vY2subW9jayJ9LCJvd25lciI6ImRpZDpraWx0OjRwZWhkZGtoRWFuZXhWVFR6V0F0cnJmbzJSN3hQbmVQcHVpSkxDN3NoUVU4OTRhWSJ9LCJjbGFpbUhhc2hlcyI6WyIweDE0NDU5N2QyODQ1ZTMyNWRmZmQ0ZTUxYTk0ZTNlOWMwNGI1MmRjMTU3M2U2NmFmYzY5Mzg0NmQ5MWYzMWE3MTMiLCIweDMxNzdlYTQxZjc2ZDA2NmQxOTEyM2MyY2IwZGUxM2EzN2Q2MzkwNmQyYzUxOWUzNmZiZmQ3NzczZmFjMWI3MTgiLCIweDlkMmRjYWY1MjM4ZDZiYzRiY2YwMzI4YWVkYjE2ODk0MzZlMDc3ZWJmNjE5OGI2YzRlOTYxNjY0ODA3ZWFlZGYiLCIweGNlZTE5M2ZmZGZhNjM0ODc5MDdkZmUwODQ4YWUxNTBkNGE3MTk2Y2MxZTNkNWJkMmM4OWJlY2I1NDAyZWZjMDciXSwiY2xhaW1Ob25jZU1hcCI6eyIweDU3NDU4YTY5NzJlNzgyMjNjZDRmN2Y0YzU5MjM2ZWE3NmYzODdhZTU3MWFiN2U3OTQ2MGY1NmYyYWE5NzYyM2YiOiJkMGM5ZDY0Ny00MmVmLTRkNDQtYjYwMy0zYjc3NjI2MGE2ZGQiLCIweGNlZmUyYjg4ZDEwODM0ODY5ZGFkM2U4ZDczMDZmNWFhOTlhMWYwNzgyMTRhZGVhZTc5Y2JlZWQzMDNlNjM4YWYiOiI2YjYyMzA4Yy04NTU3LTRiNjEtYWMwMi04ZjkwNTU1NWQ2N2IiLCIweDhiZTMyZDdlOWNjNTAxNWJmNzFiNWM0NTU1MGE4NzkwYzQzYjlhMjZkYmZhOWE4NTIzODcxMjExNzQ1ZDMzYTMiOiIyNDczOTRjMC1kNDZiLTQ4MmEtYjBjNS00OTNhZWI1MDZkNjEiLCIweDEzNjFhN2JhNzUxMjU2ZTlhYzZiM2UzZTI0OTEyZTUwZTY4YmVmNjc4YzUxMzJjMTFjOTU2NzgyMjBlM2JmNWUiOiIwN2I5NWYxNy0zZjIzLTRhOWUtOGY0My0zMzg4MTI3MzY4MmMifSwibGVnaXRpbWF0aW9ucyI6W10sImRlbGVnYXRpb25JZCI6bnVsbCwicm9vdEhhc2giOiIweGJlN2ZjYzdhYTAxODZiMDVmZDExNmMxMDBlMmQ2NzNmYjk1MTE2MzY5Mzc4ODY0MGNlNjAzMmFkMmY3MDBkYW8ifSwibmFtZSI6IkVtYWlsIENyZWRlbnRpYWwiLCJjVHlwZVRpdGxlIjoiRW1haWwiLCJhdHRlc3RlciI6IlRydXN0ZWQgRW50aXR5IGF0dGVzdGVyIiwic3RhdHVzIjoiYXR0ZXN0ZWQiLCJpc0Rvd25sb2FkZWQiOmZhbHNlfQ=="
        />
        <button
          aria-label="Remove credential"
          class="remove"
          type="button"
        />
      </section>
      <dl
        class="details"
      >
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Credential name
          </dt>
          <dd
            class="nameValue"
          >
            Email Credential
            <button
              aria-label="Edit credential name"
              class="editName"
            />
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Status
          </dt>
          <dd
            class="detailValue"
          >
            Attested
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Email
          </dt>
          <dd
            class="detailValue"
          >
            mockEmail@mock.mock
          </dd>
        </div>
      </dl>
      <h4
        class="technical"
      >
        Technical details
      </h4>
      <dl
        class="details"
      >
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            CType
          </dt>
          <dd
            class="detailValue"
          >
            Email
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Attester
          </dt>
          <dd
            class="detailValue"
          >
            Trusted Entity attester
          </dd>
        </div>
        <div
          class="hash"
        >
          <dt
            class="detailName"
          >
            Credential hash
          </dt>
          <dd
            class="detailValue"
          >
            0xbe7fcc7aa0186b05fd116c100e2d673fb951163693788640ce6032ad2f700dao
          </dd>
        </div>
      </dl>
    </section>
  </li>
</div>
`;

exports[`CredentialCard should render expanded card without backup and delete buttons 1`] = `
<div>
  <li
    aria-expanded="true"
    class="credential"
  >
    <section
      class="expanded"
    >
      <section
        class="buttons"
      >
        <button
          aria-label="Collapse credential details"
          class="collapse"
          type="button"
        />
      </section>
      <dl
        class="details"
      >
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Credential name
          </dt>
          <dd
            class="nameValue"
          >
            Email Credential
            <button
              aria-label="Edit credential name"
              class="editName"
            />
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Status
          </dt>
          <dd
            class="detailValue"
          >
            Attested
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Email
          </dt>
          <dd
            class="detailValue"
          >
            mockEmail@mock.mock
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Name
          </dt>
          <dd
            class="detailValue"
          >
            Mock Name
          </dd>
        </div>
      </dl>
      <h4
        class="technical"
      >
        Technical details
      </h4>
      <dl
        class="details"
      >
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            CType
          </dt>
          <dd
            class="detailValue"
          >
            Email
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Attester
          </dt>
          <dd
            class="detailValue"
          >
            Trusted Entity attester
          </dd>
        </div>
        <div
          class="hash"
        >
          <dt
            class="detailName"
          >
            Credential hash
          </dt>
          <dd
            class="detailValue"
          >
            0xbe7fcc7aa0186b05fd116c100e2d673fb951163693788640ce6032ad2f700dae
          </dd>
        </div>
      </dl>
    </section>
  </li>
</div>
`;

exports[`CredentialCard should render expanded share credential card 1`] = `
<div>
  <li
    aria-expanded="true"
    class="selectable"
  >
    <input
      checked=""
      class="select"
      id="0xbe7fcc7aa0186b05fd116c100e2d673fb951163693788640ce6032ad2f700dae"
      name="credential"
      type="radio"
    />
    <section
      class="shareExpanded"
    >
      <section
        class="buttons"
      >
        <button
          aria-label="Collapse credential details"
          class="collapse"
          type="button"
        />
      </section>
      <section>
        <dl
          class="details"
        >
          <div
            class="detail"
          >
            <dt
              class="detailName"
            >
              Credential name
            </dt>
            <dd
              class="detailValue"
            >
              Email Credential
            </dd>
          </div>
          <div
            class="detail"
          >
            <dt
              class="detailName"
            >
              Status
            </dt>
            <dd
              class="detailValue"
            >
              Attested
            </dd>
          </div>
          <div
            class="detail"
          >
            <dt
              class="detailName required"
            >
              Email
            </dt>
            <dd
              class="detailValue"
            >
              <label
                class="shareLabel"
              >
                <input
                  checked=""
                  class="share"
                  name="Email"
                  readonly=""
                  type="checkbox"
                />
                <span />
                mockEmail@mock.mock
              </label>
            </dd>
          </div>
          <div
            class="detail"
          >
            <dt
              class="detailName"
            >
              Name
            </dt>
            <dd
              class="detailValue"
            >
              <label
                class="shareLabel"
              >
                <input
                  class="share"
                  name="Name"
                  type="checkbox"
                />
                <span />
                Mock Name
              </label>
            </dd>
          </div>
        </dl>
        <p
          class="requiredInfo"
        >
          * required
        </p>
      </section>
      <h4
        class="shareTechnical"
      >
        Technical details
      </h4>
      <dl
        class="details"
      >
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            CType
          </dt>
          <dd
            class="detailValue"
          >
            Email
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Attester
          </dt>
          <dd
            class="detailValue"
          >
            Trusted Entity attester
          </dd>
        </div>
        <div
          class="hash"
        >
          <dt
            class="detailName"
          >
            Credential hash
          </dt>
          <dd
            class="detailValue"
          >
            0xbe7fcc7aa0186b05fd116c100e2d673fb951163693788640ce6032ad2f700dae
          </dd>
        </div>
      </dl>
    </section>
  </li>
</div>
`;

exports[`CredentialCard should render uncollapsible card 1`] = `
<div>
  <li
    aria-expanded="true"
    class="credential"
  >
    <section
      class="expanded"
    >
      <section
        class="buttons"
      >
        <a
          aria-label="Back up credential"
          class="download"
          download="Email Credential-Email.json"
          href="data:text/json;base64,eyJyZXF1ZXN0Ijp7ImNsYWltIjp7ImNUeXBlSGFzaCI6IjB4MzI5MWJiMTI2ZTMzYjQ4NjJkNDIxYmZhYTFkMmYyNzJlNmNkZmM0Zjk2NjU4OTg4ZmJjZmZlYTg5MTRiZDlhYyIsImNvbnRlbnRzIjp7IkVtYWlsIjoibW9ja0VtYWlsQG1vY2subW9jayIsIk5hbWUiOiJNb2NrIE5hbWUifSwib3duZXIiOiJkaWQ6a2lsdDpsaWdodDowMDRxZTV0SmdvQmUySko3ZWpWVkdCemtUeGpqUjRuUENHZzdRNG5rWkxxZEhvN3NQUiJ9LCJjbGFpbUhhc2hlcyI6WyIweDE0NDU5N2QyODQ1ZTMyNWRmZmQ0ZTUxYTk0ZTNlOWMwNGI1MmRjMTU3M2U2NmFmYzY5Mzg0NmQ5MWYzMWE3MTMiLCIweDMxNzdlYTQxZjc2ZDA2NmQxOTEyM2MyY2IwZGUxM2EzN2Q2MzkwNmQyYzUxOWUzNmZiZmQ3NzczZmFjMWI3MTgiLCIweDlkMmRjYWY1MjM4ZDZiYzRiY2YwMzI4YWVkYjE2ODk0MzZlMDc3ZWJmNjE5OGI2YzRlOTYxNjY0ODA3ZWFlZGYiLCIweGNlZTE5M2ZmZGZhNjM0ODc5MDdkZmUwODQ4YWUxNTBkNGE3MTk2Y2MxZTNkNWJkMmM4OWJlY2I1NDAyZWZjMDciXSwiY2xhaW1Ob25jZU1hcCI6eyIweDU3NDU4YTY5NzJlNzgyMjNjZDRmN2Y0YzU5MjM2ZWE3NmYzODdhZTU3MWFiN2U3OTQ2MGY1NmYyYWE5NzYyM2YiOiJkMGM5ZDY0Ny00MmVmLTRkNDQtYjYwMy0zYjc3NjI2MGE2ZGQiLCIweGNlZmUyYjg4ZDEwODM0ODY5ZGFkM2U4ZDczMDZmNWFhOTlhMWYwNzgyMTRhZGVhZTc5Y2JlZWQzMDNlNjM4YWYiOiI2YjYyMzA4Yy04NTU3LTRiNjEtYWMwMi04ZjkwNTU1NWQ2N2IiLCIweDhiZTMyZDdlOWNjNTAxNWJmNzFiNWM0NTU1MGE4NzkwYzQzYjlhMjZkYmZhOWE4NTIzODcxMjExNzQ1ZDMzYTMiOiIyNDczOTRjMC1kNDZiLTQ4MmEtYjBjNS00OTNhZWI1MDZkNjEiLCIweDEzNjFhN2JhNzUxMjU2ZTlhYzZiM2UzZTI0OTEyZTUwZTY4YmVmNjc4YzUxMzJjMTFjOTU2NzgyMjBlM2JmNWUiOiIwN2I5NWYxNy0zZjIzLTRhOWUtOGY0My0zMzg4MTI3MzY4MmMifSwibGVnaXRpbWF0aW9ucyI6W10sImRlbGVnYXRpb25JZCI6bnVsbCwicm9vdEhhc2giOiIweGJlN2ZjYzdhYTAxODZiMDVmZDExNmMxMDBlMmQ2NzNmYjk1MTE2MzY5Mzc4ODY0MGNlNjAzMmFkMmY3MDBkYWUifSwibmFtZSI6IkVtYWlsIENyZWRlbnRpYWwiLCJjVHlwZVRpdGxlIjoiRW1haWwiLCJhdHRlc3RlciI6IlRydXN0ZWQgRW50aXR5IGF0dGVzdGVyIiwic3RhdHVzIjoiYXR0ZXN0ZWQiLCJpc0Rvd25sb2FkZWQiOnRydWV9"
        />
        <button
          aria-label="Remove credential"
          class="remove"
          type="button"
        />
      </section>
      <dl
        class="details"
      >
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Credential name
          </dt>
          <dd
            class="nameValue"
          >
            Email Credential
            <button
              aria-label="Edit credential name"
              class="editName"
            />
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Status
          </dt>
          <dd
            class="detailValue"
          >
            Attested
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Email
          </dt>
          <dd
            class="detailValue"
          >
            mockEmail@mock.mock
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Name
          </dt>
          <dd
            class="detailValue"
          >
            Mock Name
          </dd>
        </div>
      </dl>
      <h4
        class="technical"
      >
        Technical details
      </h4>
      <dl
        class="details"
      >
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            CType
          </dt>
          <dd
            class="detailValue"
          >
            Email
          </dd>
        </div>
        <div
          class="detail"
        >
          <dt
            class="detailName"
          >
            Attester
          </dt>
          <dd
            class="detailValue"
          >
            Trusted Entity attester
          </dd>
        </div>
        <div
          class="hash"
        >
          <dt
            class="detailName"
          >
            Credential hash
          </dt>
          <dd
            class="detailValue"
          >
            0xbe7fcc7aa0186b05fd116c100e2d673fb951163693788640ce6032ad2f700dae
          </dd>
        </div>
      </dl>
    </section>
  </li>
</div>
`;
